Minor fixes again - Fixed buttons going out of the site - Welcome to TripSit Chat fixed from col-md-4 to col-md-12 - Other Chanel now is h3 for better visibility

--- a/public/stylesheets/dark.css
+++ b/public/stylesheets/dark.css
@@ -161,9 +161,11 @@ input:checked + .slider:before {
   font-size:10px;
 }
 .bsbutton {
-  border-radius:25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
   height:100%;
-  margin:5px;
+  margin: 0 20px 20px 0;
 }
 .jumbotron p {
 font-size:15px;
